--- a/src/app/portal/unit-booking/unit-booking.component.html
+++ b/src/app/portal/unit-booking/unit-booking.component.html
@@ -47,7 +47,7 @@
             </div>
             <div class="col-sm-6 col-md-4  ">
                 <div class="form-group">
-                    <label for="state" class="form-label">Select House  <span class="text-danger">*</span></label>
+                    <label for="state" class="form-label">Select House <span class="text-danger">*</span></label>
                     <select class="form-select" aria-label="Default select example">
                         <option selected> </option>
                         <option value="1">One</option>
@@ -68,18 +68,55 @@
                     </select>
                 </div>
 
-            </div> 
-            
-           
+            </div>
+
+
         </div>
 
 
-       
+
         <div class="mt-4 d-flex justify-content-end">
             <button class="btn btn-primary form-save-btn">
                 Save
             </button>
         </div>
+
+        <!-- dynamic-table.component.html -->
+        <div class="w-100" style="overflow-x: auto; padding-top: 30px;">
+            <table class="table table-bordered table-striped">
+                <thead class="">
+                    <tr>
+                        <th style="background-color: rgba(0, 133, 159, 1); color: #faf7f7;">SL.NO</th>
+                        <th style="background-color: rgba(0, 133, 159, 1);color: #faf7f7;">Unit No</th>
+                        <th style="background-color: rgba(0, 133, 159, 1);color: #faf7f7;">Occupied</th>
+                        <th style="background-color: rgba(0, 133, 159, 1);color: #faf7f7;">Available</th>
+                        <th style="background-color: rgba(0, 133, 159, 1);color: #faf7f7;">Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let item of tableData">
+                        <td>{{ item.SL_NO }}</td>
+                        <td>{{ item.Unit_No }}</td>
+                        <td>{{ item.Occupied }}</td>
+                        <td>{{ item.Available}}</td>
+                        <td>
+                            <!-- popup-modal.component.html -->
+
+                            <div class="modal">
+                                <div class="modal-content">
+                                    <h2>Popup Content</h2>
+                                    <!-- Add your content here -->
+                                    <button (click)="closeModal()">Close</button>
+                                </div>
+                            </div>
+
+
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
     </div>
 </section>
 <app-footer></app-footer>
