--- a/src/app/portal/unit-booking/unit-booking.component.html
+++ b/src/app/portal/unit-booking/unit-booking.component.html
@@ -100,16 +100,10 @@
                         <td>{{ item.Occupied }}</td>
                         <td>{{ item.Available}}</td>
                         <td>
-                            <!-- popup-modal.component.html -->
-
-                            <div class="modal">
-                                <div class="modal-content">
-                                    <h2>Popup Content</h2>
-                                    <!-- Add your content here -->
-                                    <button (click)="closeModal()">Close</button>
-                                </div>
-                            </div>
-
+                           
+                            <button class="btn btn-primary form-save-btn">
+                                Save
+                            </button>
 
                         </td>
                     </tr>
