--- a/src/app/portal/unit-booking/unit-booking.component.html
+++ b/src/app/portal/unit-booking/unit-booking.component.html
@@ -101,9 +101,7 @@
                         <td>{{ item.Available}}</td>
                         <td>
                            
-                            <button class="btn btn-primary form-save-btn">
-                                Save
-                            </button>
+                            <button></button>
 
                         </td>
                     </tr>
