--- a/src/app/portal/unit-booking/unit-booking.component.html
+++ b/src/app/portal/unit-booking/unit-booking.component.html
@@ -100,15 +100,8 @@
                         <td>{{ item.Occupied }}</td>
                         <td>{{ item.Available}}</td>
                         <td>
-                            <!-- popup-modal.component.html -->
+                            <button type="button" style="background-color: rgb(22, 133, 236);color: #faf7f7;"class="btn ">Book</button>
 
-                            <div class="modal">
-                                <div class="modal-content">
-                                    <h2>Popup Content</h2>
-                                    <!-- Add your content here -->
-                                    <button (click)="closeModal()">Close</button>
-                                </div>
-                            </div>
 
 
                         </td>
