--- a/src/app/portal/unit-registration/unit-registration.component.css
+++ b/src/app/portal/unit-registration/unit-registration.component.css
@@ -1,4 +1,15 @@
-button{
+.button{
     font-size: x-large; 
     font-weight: bold;
 }
+
+.table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  .table th, .table td {
+    border: 1px solid #278A9D;
+    padding: 8px;
+    text-align: center;
+  }
