--- a/src/app/portal/utility-calculation/utility-calculation.component.css
+++ b/src/app/portal/utility-calculation/utility-calculation.component.css
@@ -17,3 +17,14 @@ input[type=file]::file-selector-button {
   input[type=file]::file-selector-button:hover {
     background: #17adcb;
   }
+
+  .table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  .table th, .table td {
+    border: 1px solid #278A9D;
+    padding: 8px;
+    text-align: center;
+  }
