--- a/src/app/portal/agreement-master/agreement-master.component.css
+++ b/src/app/portal/agreement-master/agreement-master.component.css
@@ -70,4 +70,13 @@ input[type=file]::file-selector-button {
       -ms-transform: translateX(26px);
       transform: translateX(26px);
     }
+    .table {
+      width: 100%;
+      border-collapse: collapse;
+    }
     
+    .table th, .table td {
+      border: 1px solid #278A9D;
+      padding: 8px;
+      text-align: center;
+    }
