--- a/src/app/portal/agreement-type-master/agreement-type-master.component.html
+++ b/src/app/portal/agreement-type-master/agreement-type-master.component.html
@@ -40,6 +40,36 @@
                 Save
             </button>
         </div>
+        <div class="w-100" style="overflow-x: auto; padding-top: 30px;">
+            <table class="table table-bordered table-striped">
+                <thead class="">
+                    <tr>
+                        <th style="background-color: rgba(0, 133, 159, 1); color: #faf7f7;">SL.NO</th>
+                        <th style="background-color: rgba(0, 133, 159, 1);color: #faf7f7;">Unit No</th>
+                        <th style="background-color: rgba(0, 133, 159, 1);color: #faf7f7;">Occupied</th>
+                        <th style="background-color: rgba(0, 133, 159, 1);color: #faf7f7;">Available</th>
+                        <th style="background-color: rgba(0, 133, 159, 1);color: #faf7f7;">Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let item of tableData">
+                        <td>{{ item.SL_NO }}</td>
+                        <td>{{ item.Unit_No }}</td>
+                        <td>{{ item.Occupied }}</td>
+                        <td>{{ item.Available}}</td>
+                        <td >
+                            <button class="btn  btn-sm mx-2" style="background-color: rgb(22, 133, 236);color: #faf7f7;" >
+                                <i class="fa-solid fa-edit"></i>
+                            </button>
+                            <!-- <button  (click)="removeZone(zone.zoneId)"class="btn btn-danger btn-sm"> -->
+                            <button class="btn btn-danger btn-sm mx-2 " >
+                                <i class="fa-solid fa-trash-alt"></i>
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </section>
 <app-footer></app-footer>
