--- a/src/app/portal/unit-registration/unit-registration.component.html
+++ b/src/app/portal/unit-registration/unit-registration.component.html
@@ -43,7 +43,7 @@
             <div class="col-sm-6 col-md-2   mt-4 pt-2 ">
 
 
-                <button type="button" class="btn btn-success py-0 px-2.5">+</button>
+                <button type="button" class=" button btn btn-success py-0 px-2.5">+</button>
             </div>
 
 
@@ -82,7 +82,7 @@
                 <input type="text" name="" id="" class="form-control">
             </div>
             <div class="col-sm-6 col-md-1 pt-4 mt-3">
-                <button type="button" class="btn btn-danger py-0 px-3">-</button>
+                <button type=" button" class=" button btn btn-danger py-0 px-3">-</button>
             </div>
             <div class="col-sm-6 col-md-2 py-2">
 
@@ -107,7 +107,7 @@
                 <input type="text" name="" id="" class="form-control">
             </div>
             <div class="col-sm-6 col-md-1  py-2">
-                <button type="button" class="btn btn-danger py-0 px-3">-</button>
+                <button type="button" class=" button btn btn-danger py-0 px-3">-</button>
             </div>
             <div class="col-sm-6 col-md-2 py-2">
 
@@ -132,7 +132,7 @@
                 <input type="text" name="" id="" class="form-control">
             </div>
             <div class="col-sm-6 col-md-1  py-2">
-                <button type="button" class="btn btn-danger py-0 px-3">-</button>
+                <button type="button" class=" button btn btn-danger py-0 px-3">-</button>
             </div>
             <div class="col-sm-6 col-md-2 py-2">
 
@@ -157,7 +157,7 @@
                 <input type="text" name="" id="" class="form-control">
             </div>
             <div class="col-sm-6 col-md-1  py-2">
-                <button type="button" class="btn btn-danger py-0 px-3">-</button>
+                <button type="button" class=" button btn btn-danger py-0 px-3">-</button>
             </div>
             <div class="col-sm-6 col-md-2 py-2">
 
@@ -182,7 +182,7 @@
                 <input type="text" name="" id="" class="form-control">
             </div>
             <div class="col-sm-6 col-md-1  py-2">
-                <button type="button" class="btn btn-danger py-0 px-3">-</button>
+                <button type="button" class="button btn btn-danger py-0 px-3">-</button>
             </div>
 
             
@@ -192,6 +192,36 @@
             <button class="btn btn-primary form-save-btn">
                 Save
             </button>
+        </div>
+        <div class="w-100" style="overflow-x: auto; padding-top: 30px;">
+            <table class="table table-bordered table-striped">
+                <thead class="">
+                    <tr>
+                        <th style="background-color: rgba(0, 133, 159, 1); color: #faf7f7;">SL.NO</th>
+                        <th style="background-color: rgba(0, 133, 159, 1);color: #faf7f7;">Unit No</th>
+                        <th style="background-color: rgba(0, 133, 159, 1);color: #faf7f7;">Occupied</th>
+                        <th style="background-color: rgba(0, 133, 159, 1);color: #faf7f7;">Available</th>
+                        <th style="background-color: rgba(0, 133, 159, 1);color: #faf7f7;">Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let item of tableData">
+                        <td>{{ item.SL_NO }}</td>
+                        <td>{{ item.Unit_No }}</td>
+                        <td>{{ item.Occupied }}</td>
+                        <td>{{ item.Available}}</td>
+                        <td >
+                            <button class="btn  btn-sm mx-2" style="background-color: rgb(22, 133, 236);color: #faf7f7;" >
+                                <i class="fa-solid fa-edit"></i>
+                            </button>
+                            <!-- <button  (click)="removeZone(zone.zoneId)"class="btn btn-danger btn-sm"> -->
+                            <button class="btn btn-danger btn-sm mx-2 " >
+                                <i class="fa-solid fa-trash-alt"></i>
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </section>
