--- a/src/app/portal/unit-booking/unit-booking.component.html
+++ b/src/app/portal/unit-booking/unit-booking.component.html
@@ -100,8 +100,11 @@
                         <td>{{ item.Occupied }}</td>
                         <td>{{ item.Available}}</td>
                         <td>
-                           
-                            <button></button>
+
+                            <button class="btn btn-primary form-save-btn">
+                                Save
+                            </button>
+
 
                         </td>
                     </tr>
